[project]
name = "social-media-downloader"
version = "2.1.2"
description = "Social Media Downloader Telegram Bot"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot==22.8",
    "pytubefix==10.10.1",
    "requests==2.34.2",
    "urllib3==2.7.0",
    "python-dotenv==1.2.2",
]

[project.scripts]
social-media-downloader = "main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: the project is a set of top-level modules and packages
# rather than a single package matching the project name.
only-include = ["main.py", "bot", "media", "twitter", "instagram", "yt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["main", "bot", "media", "twitter", "instagram", "yt"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# pycodestyle errors, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
